crates/math-core/tests/snapshots/wiki_test__wiki154.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega"
---
<math>
    <mrow><mspace/><mi mathvariant="normal">Ρ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Σ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Τ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Υ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Φ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Χ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ψ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ω</mi></mrow>
</math>
