crates/math-core/tests/snapshots/wiki_test__wiki161.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathbb{ABCDEFGHI} \\\\ \\mathbb{JKLMNOPQR} \\\\ \\mathbb{STUVWXYZ}"
---
<math>
    <mrow><mspace/><mi>𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀</mi></mrow>
    <mrow>
    </mrow>
    <mrow><mspace/><mi>𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ</mi></mrow>
    <mrow>
    </mrow>
    <mrow><mspace/><mi>𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ</mi></mrow>
</math>
