crates/math-core/tests/snapshots/wiki_test__wiki163.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta}"
---
<math>
    <mpadded><mi>𝚨𝚩𝚪𝚫𝚬𝚭𝚮𝚯</mi></mpadded>
</math>
