crates/math-core/tests/snapshots/wiki_test__wiki166.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\alpha \\beta \\gamma \\delta \\epsilon \\zeta \\eta \\theta}"
---
<math>
    <mi>𝜶𝜷𝜸𝜹𝝐𝜻𝜼𝜽</mi>
</math>
